--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             align-items: flex-start;
             height: 100vh;
             margin: 0;
-            padding-top: 20px;
+            padding-top: 20px; /* ページのトップに空白を作る */
         }
         .container {
             background-color: #fff;
@@ -24,58 +24,109 @@
             padding: 20px;
             box-sizing: border-box;
         }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        input[type="text"], input[type="tel"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .visit-buttons, .symptoms {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .visit-buttons button, .symptoms button {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f7f7f7;
+            cursor: pointer;
+            box-sizing: border-box;
+            text-align: center;
+            white-space: nowrap;
+        }
+        .visit-buttons button.active, .symptoms button.active {
+            background-color: #444;
+            color: #fff;
+        }
+        .date-inputs input[type="datetime-local"] {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .submit-button {
+            width: 100%;
+            padding: 15px;
+            border: none;
+            border-radius: 4px;
+            background-color: #ff4c4c;
+            color: #fff;
+            font-size: 18px;
+            cursor: pointer;
+        }
         .calendar-container {
             position: relative;
+            margin-bottom: 20px;
         }
-        .calendar, .time-picker {
-            position: absolute;
-            top: 100%;
-            left: 0;
+        .calendar {
             width: 100%;
             background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 100;
-            display: none;
-            margin-top: 5px;
         }
-        .calendar table, .time-picker {
+        .calendar table {
             width: 100%;
             border-collapse: collapse;
         }
-        .calendar th, .calendar td, .time-picker div {
-            padding: 10px;
+        .calendar th, .calendar td {
+            width: 14.28%;
             text-align: center;
+            padding: 10px;
             cursor: pointer;
-            border-bottom: 1px solid #eee;
         }
         .calendar th {
             background-color: #f7f7f7;
         }
-        .calendar td:hover, .time-picker div:hover {
+        .calendar td:hover {
             background-color: #ddd;
         }
-        .calendar td.selected, .time-picker div.selected {
+        .calendar td.selected {
             background-color: #444;
             color: #fff;
         }
+        .time-picker {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 5px;
+            margin-top: 10px;
+        }
         .time-picker div {
             padding: 10px;
-            border-bottom: 1px solid #eee;
+            text-align: center;
+            background-color: #f7f7f7;
+            cursor: pointer;
         }
-        .time-picker div:last-child {
-            border-bottom: none;
+        .time-picker div:hover {
+            background-color: #ddd;
         }
-        .time-picker-container {
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .time-picker div {
-            width: 50%;
-            box-sizing: border-box;
-        }
-    </style>
     </style>
 </head>
 <body>
@@ -102,7 +153,6 @@
 
         <label for="date1">第1希望日※必須<br>希望時間は00分or30分でお願いします</label>
         <div class="calendar-container">
-            <input type="text" id="date1" placeholder="タップして日時を入力" readonly onclick="toggleCalendar('calendar1')">
             <div id="calendar1" class="calendar"></div>
             <div id="timePicker1" class="time-picker"></div>
         </div>
@@ -123,34 +173,18 @@
     <script>
         let visitCount = '';
         let selectedSymptom = '';
-        let currentYear, currentMonth;
         let selectedDate;
 
-        function createCalendar(id, year, month) {
+        document.addEventListener('DOMContentLoaded', () => {
+            const now = new Date();
+            createCalendar('calendar1', now);
+        });
+
+        function createCalendar(id, startDate) {
             const calendar = document.getElementById(id);
             calendar.innerHTML = '';
 
-            currentYear = year;
-            currentMonth = month;
-
-            const date = new Date(year, month);
             const days = ['日', '月', '火', '水', '木', '金', '土'];
-
-            const nav = document.createElement('div');
-            nav.style.display = 'flex';
-            nav.style.justifyContent = 'space-between';
-
-            const prevMonthBtn = document.createElement('button');
-            prevMonthBtn.textContent = '前の月';
-            prevMonthBtn.onclick = () => changeMonth(id, -1);
-
-            const nextMonthBtn = document.createElement('button');
-            nextMonthBtn.textContent = '次の月';
-            nextMonthBtn.onclick = () => changeMonth(id, 1);
-
-            nav.appendChild(prevMonthBtn);
-            nav.appendChild(nextMonthBtn);
-            calendar.appendChild(nav);
 
             const table = document.createElement('table');
             const headerRow = document.createElement('tr');
@@ -160,59 +194,31 @@
                 headerRow.appendChild(th);
             });
             table.appendChild(headerRow);
-            calendar.appendChild(table);
 
-            const firstDay = new Date(year, month, 1).getDay();
+            let date = new Date(startDate.getTime());
             let row = document.createElement('tr');
-            for (let i = 0; i < firstDay; i++) {
-                row.appendChild(document.createElement('td'));
-            }
 
-            const daysInMonth = new Date(year, month + 1, 0).getDate();
-            for (let day = 1; day <= daysInMonth; day++) {
-                if (row.children.length === 7) {
-                    table.appendChild(row);
-                    row = document.createElement('tr');
-                }
+            for (let i = 0; i < 7; i++) {
                 const cell = document.createElement('td');
-                cell.textContent = day;
-                cell.onclick = (event) => selectDate(event, id, year, month, day);
+                cell.textContent = `${('0' + (date.getMonth() + 1)).slice(-2)}/${('0' + date.getDate()).slice(-2)}`;
+                cell.onclick = (event) => selectDate(event, id, date);
                 row.appendChild(cell);
+                date.setDate(date.getDate() + 1);
             }
+
             table.appendChild(row);
+            calendar.appendChild(table);
         }
 
-        function toggleCalendar(id) {
-            const calendar = document.getElementById(id);
-            if (calendar.style.display === 'none' || !calendar.style.display) {
-                calendar.style.display = 'block';
-                const now = new Date();
-                createCalendar(id, now.getFullYear(), now.getMonth());
-            } else {
-                calendar.style.display = 'none';
-            }
+        function selectDate(event, id, date) {
+            selectedDate = date.toISOString().split('T')[0];
+            populateTimePicker(id);
         }
 
-        function changeMonth(id, offset) {
-            const newMonth = currentMonth + offset;
-            const newYear = newMonth < 0 ? currentYear - 1 : newMonth > 11 ? currentYear + 1 : currentYear;
-            const month = (newMonth + 12) % 12;
-            createCalendar(id, newYear, month);
-        }
-
-        function selectDate(event, id, year, month, day) {
-            selectedDate = `${year}-${('0' + (month + 1)).slice(-2)}-${('0' + day).slice(-2)}`;
-            const timePicker = document.getElementById(`timePicker${id.charAt(id.length - 1)}`);
-            const rect = event.target.getBoundingClientRect();
-            timePicker.style.left = `${rect.left}px`;
-            timePicker.style.top = `${rect.bottom + window.scrollY}px`;
-            timePicker.style.display = 'block';
-            populateTimePicker(timePicker, id);
-        }
-
-        function populateTimePicker(timePicker, calendarId) {
+        function populateTimePicker(calendarId) {
+            const timePicker = document.getElementById(`timePicker${calendarId.charAt(calendarId.length - 1)}`);
             timePicker.innerHTML = '';
-            for (let hour = 9; hour <= 18; hour++) {
+            for (let hour = 9; hour <= 15; hour++) {
                 ['00', '30'].forEach(minute => {
                     const timeOption = document.createElement('div');
                     timeOption.textContent = `${('0' + hour).slice(-2)}:${minute}`;
@@ -223,10 +229,8 @@
         }
 
         function selectTime(calendarId, time) {
-            const input = document.querySelector(`#${calendarId}`).previousElementSibling;
+            const input = document.getElementById(calendarId).previousElementSibling;
             input.value = `${selectedDate} ${time}`;
-            document.getElementById(calendarId).style.display = 'none';
-            document.getElementById(`timePicker${calendarId.charAt(calendarId.length - 1)}`).style.display = 'none';
         }
 
         function selectVisit(element) {
