--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
             color: #fff;
         }
         .time-picker {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 5px;
+            display: flex;
+            flex-direction: column;
             margin-top: 10px;
         }
         .time-picker div {
