--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
             display: flex;
             margin-bottom: 20px;
         }
+        .time-picker {
+            display: flex;
+            flex-direction: column;
+            flex: 0 0 80px;
+            margin-right: 10px;
+        }
+        .time-picker div {
+            padding: 10px;
+            text-align: center;
+            background-color: #f7f7f7;
+            cursor: pointer;
+            margin-bottom: 2px;
+        }
+        .time-picker div:hover {
+            background-color: #ddd;
+        }
         .calendar {
             flex: 1;
             background-color: #fff;
@@ -113,27 +129,6 @@
             background-color: #444;
             color: #fff;
         }
-        .time-list {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 100%;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 1;
-        }
-        .calendar td:hover .time-list {
-            display: block;
-        }
-        .time-list div {
-            padding: 5px;
-            cursor: pointer;
-        }
-        .time-list div:hover {
-            background-color: #ddd;
-        }
     </style>
 </head>
 <body>
@@ -160,6 +155,7 @@
 
         <label for="date1">第1希望日※必須<br>希望時間は00分or30分でお願いします</label>
         <div class="calendar-container">
+            <div id="timePicker1" class="time-picker"></div>
             <div id="calendar1" class="calendar"></div>
         </div>
 
@@ -184,12 +180,13 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             const now = new Date();
+            populateTimePicker('timePicker1');
             createCalendar('calendar1', now);
         });
 
-        function populateTimeList() {
-            const timeList = document.createElement('div');
-            timeList.className = 'time-list';
+        function populateTimePicker(timePickerId) {
+            const timePicker = document.getElementById(timePickerId);
+            timePicker.innerHTML = '';
             for (let hour = 9; hour <= 15; hour++) {
                 ['00', '30'].forEach(minute => {
                     const timeOption = document.createElement('div');
@@ -198,10 +195,9 @@
                         selectedTime = timeOption.textContent;
                         updateDateTime();
                     };
-                    timeList.appendChild(timeOption);
+                    timePicker.appendChild(timeOption);
                 });
             }
-            return timeList;
         }
 
         function createCalendar(id, startDate) {
@@ -225,7 +221,6 @@
             for (let i = 0; i < 7; i++) {
                 const cell = document.createElement('td');
                 cell.textContent = `${('0' + (date.getMonth() + 1)).slice(-2)}/${('0' + date.getDate()).slice(-2)}`;
-                cell.appendChild(populateTimeList());
                 cell.onclick = (event) => {
                     selectedDate = date.toISOString().split('T')[0];
                     updateDateTime();
