--- a/index.html
+++ b/index.html
@@ -118,17 +118,18 @@
             display: flex;
             flex-direction: column;
             position: absolute;
-            top: 10px;
-            left: 10px;
+            left: 0;
+            top: 0;
+            width: 30px;
+            height: 100%;
+            border-right: 1px solid #ccc;
             background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 1;
         }
         .time-list div {
             padding: 5px;
             cursor: pointer;
+            text-align: center;
+            border-bottom: 1px solid #ccc;
         }
         .time-list div:hover {
             background-color: #ddd;
