--- a/index.html
+++ b/index.html
@@ -91,17 +91,16 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: auto;
         }
         .calendar table {
             width: 100%;
             border-collapse: collapse;
         }
         .calendar th, .calendar td {
-            width: 14.28%;
             text-align: center;
             padding: 10px;
             cursor: pointer;
-            position: relative;
             vertical-align: top;
         }
         .calendar th {
@@ -113,26 +112,6 @@
         .calendar td.selected {
             background-color: #444;
             color: #fff;
-        }
-        .time-list {
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 30px;
-            height: 100%;
-            border-right: 1px solid #ccc;
-            background-color: #fff;
-        }
-        .time-list div {
-            padding: 5px;
-            cursor: pointer;
-            text-align: center;
-            border-bottom: 1px solid #ccc;
-        }
-        .time-list div:hover {
-            background-color: #ddd;
         }
     </style>
 </head>
@@ -160,7 +139,45 @@
 
         <label for="date1">第1希望日※必須<br>希望時間は00分or30分でお願いします</label>
         <div class="calendar-container">
-            <div id="calendar1" class="calendar"></div>
+            <div id="calendar1" class="calendar">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>時間</th>
+                            <th>5(月)</th>
+                            <th>6(火)</th>
+                            <th>7(水)</th>
+                            <th>8(木)</th>
+                            <th>9(金)</th>
+                            <th>10(土)</th>
+                            <th>11(日)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>10:00</td>
+                            <td>◯</td>
+                            <td>◯</td>
+                            <td>◯</td>
+                            <td>◯</td>
+                            <td>◯</td>
+                            <td>◯</td>
+                            <td>◯</td>
+                        </tr>
+                        <tr>
+                            <td>10:30</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                        </tr>
+                        <!-- Add more rows as per the image -->
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <label for="date2">第2希望日</label>
@@ -184,66 +201,8 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             const now = new Date();
-            createCalendar('calendar1', now);
+            // createCalendar('calendar1', now); // This function is no longer necessary
         });
-
-        function populateTimeList() {
-            const timeList = document.createElement('div');
-            timeList.className = 'time-list';
-            for (let hour = 9; hour <= 15; hour++) {
-                ['00', '30'].forEach(minute => {
-                    const timeOption = document.createElement('div');
-                    timeOption.textContent = `${('0' + hour).slice(-2)}:${minute}`;
-                    timeOption.onclick = () => {
-                        selectedTime = timeOption.textContent;
-                        updateDateTime();
-                    };
-                    timeList.appendChild(timeOption);
-                });
-            }
-            return timeList;
-        }
-
-        function createCalendar(id, startDate) {
-            const calendar = document.getElementById(id);
-            calendar.innerHTML = '';
-
-            const days = ['日', '月', '火', '水', '木', '金', '土'];
-
-            const table = document.createElement('table');
-            const headerRow = document.createElement('tr');
-            days.forEach(day => {
-                const th = document.createElement('th');
-                th.textContent = day;
-                headerRow.appendChild(th);
-            });
-            table.appendChild(headerRow);
-
-            let date = new Date(startDate.getTime());
-            let row = document.createElement('tr');
-
-            for (let i = 0; i < 7; i++) {
-                const cell = document.createElement('td');
-                cell.textContent = `${('0' + (date.getMonth() + 1)).slice(-2)}/${('0' + date.getDate()).slice(-2)}`;
-                cell.appendChild(populateTimeList());
-                cell.onclick = (event) => {
-                    selectedDate = date.toISOString().split('T')[0];
-                    updateDateTime();
-                };
-                row.appendChild(cell);
-                date.setDate(date.getDate() + 1);
-            }
-
-            table.appendChild(row);
-            calendar.appendChild(table);
-        }
-
-        function updateDateTime() {
-            if (selectedDate && selectedTime) {
-                const input = document.getElementById('calendar1').parentElement.previousElementSibling;
-                input.value = `${selectedDate} ${selectedTime}`;
-            }
-        }
 
         function selectVisit(element) {
             document.getElementById('firstVisit').classList.remove('active');
@@ -287,27 +246,19 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}${formData.visitCount}${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}${formData.visitCount}${formData.irradiationsCount}\n希望日時：\n ${formData.dates.join('\n ')}\nその他メッセージ：${formData.message}`
             }]).then(() => {
-                /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
-                /* LIFFウィンドウを閉じる */
+                alert('予約が送信されました');
                 liff.closeWindow();
             }).catch((err) => {
-                /* メッセージ送信失敗時の処理 */
-                console.error('メッセージの送信に失敗しました', err);
+                console.error(err);
+                alert('メッセージ送信に失敗しました');
             });
         }
 
-        function formatDate(datetime) {
-            if (!datetime) return '';
-            const date = new Date(datetime);
-            const year = date.getFullYear();
-            const month = ('0' + (date.getMonth() + 1)).slice(-2);
-            const day = ('0' + date.getDate()).slice(-2);
-            const hours = ('0' + date.getHours()).slice(-2);
-            const minutes = ('0' + date.getMinutes()).slice(-2);
-            return `${year}年${month}月${day}日 ${hours}:${minutes}`;
+        function formatDate(dateStr) {
+            const date = new Date(dateStr);
+            return `${date.getFullYear()}-${('0' + (date.getMonth() + 1)).slice(-2)}-${('0' + date.getDate()).slice(-2)} ${('0' + date.getHours()).slice(-2)}:${('0' + date.getMinutes()).slice(-2)}`;
         }
     </script>
 </body>
