--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>予約フォーム</h1>
+        <h1>予約フォーム1</h1>
         <label for="name">お客様名※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -198,6 +198,19 @@
     let selectedDate;
     let selectedTime = '';
 
+        // LIFF初期化
+        document.addEventListener('DOMContentLoaded', function() {
+            liff.init({
+                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+            }).then(() => {
+                // LIFF初期化成功時の処理
+                console.log('LIFF初期化成功');
+            }).catch((err) => {
+                // LIFF初期化失敗時の処理
+                console.error('LIFF初期化失敗', err);
+            });
+        });
+    
     document.addEventListener('DOMContentLoaded', () => {
         const now = new Date();
         fetchAvailability(now);
