--- a/index.html
+++ b/index.html
@@ -154,27 +154,6 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>10:00</td>
-                            <td>◯</td>
-                            <td>◯</td>
-                            <td>◯</td>
-                            <td>◯</td>
-                            <td>◯</td>
-                            <td>◯</td>
-                            <td>◯</td>
-                        </tr>
-                        <tr>
-                            <td>10:30</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                        </tr>
-                        <!-- Add more rows as per the image -->
-                    </tbody>
                 </table>
             </div>
         </div>
@@ -323,13 +302,23 @@
                 const day = new Date();
                 day.setDate(day.getDate() + i);
 
-                const isAvailable = availability.some(slot => {
+                const count = availability.reduce((acc, slot) => {
                     const slotStart = new Date(slot.startTime);
                     const slotEnd = new Date(slot.endTime);
-                    return slotStart <= day && day < slotEnd;
-                });
+                    if (slotStart <= day && day < slotEnd) {
+                        return acc + 1;
+                    }
+                    return acc;
+                }, 0);
 
-                cell.textContent = isAvailable ? '◯' : '-';
+                if (count === 0) {
+                    cell.textContent = '◯';
+                } else if (count === 1) {
+                    cell.textContent = '△';
+                } else {
+                    cell.textContent = '×';
+                }
+
                 cell.addEventListener('click', () => selectDate(cell)); // セルがクリックされたときにselectDateを呼び出す
                 row.appendChild(cell);
             }
